ARROW-1941: [Python] Fix empty list roundtrip in to_pandas

This closes [ARROW-1941](https://issues.apache.org/jira/browse/ARROW-1941).

Author: Licht-T <licht-t@outlook.jp>

Closes #1449 from Licht-T/fix-empty-list-roundtrip and squashes the following commits:

165dc6f [Licht-T] TST: Add test for the empty list roundtrip
0ddfd87 [Licht-T] BUG: Fix empty list roundtrip